--- a/app/src/main/res/layout/list_view_item_layout.xml
+++ b/app/src/main/res/layout/list_view_item_layout.xml
@@ -21,6 +21,7 @@
             android:layout_height="80dp"
             android:src="@mipmap/ic_launcher"
             android:scaleType="centerCrop"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -28,8 +29,7 @@
             android:gravity="center_vertical"
             android:orientation="vertical">
             <TextView
-                android:id="@+id/book_info_textview_name"
-                style="@style/TextStyle_title_golden"
+                android:id="@+id/newstitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="雪中悍刀行"/>
@@ -37,22 +37,24 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
+                android:orientation="vertical"
                 android:gravity="center_vertical">
                 <TextView
-                    android:id="@+id/book_info_textview_author"
+                    android:id="@+id/newsauthor"
                     style="@style/TextStyle_gray"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="作者:烽火戏诸侯"/>
-            </LinearLayout>
+
             <TextView
-                android:id="@+id/book_info_textview_introduction"
+                android:id="@+id/newstime"
                 style="@style/TextStyle_gray"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:lines="2"
                 android:text="简介:新婚夜，某妖女看着掀开她盖头的死对头，怒了，“怎么是你？我要拜堂成亲的人明明是唐家大公子！”..."/>
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
