1.周五日常保存代码

--- a/app/src/main/res/layout/act_web_browser.xml
+++ b/app/src/main/res/layout/act_web_browser.xml
@@ -46,6 +46,7 @@
         android:layout_height="match_parent">
 
         <LinearLayout
+            android:id="@+id/webViewLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
