--- a/app/src/main/res/layout/item_content_news_detail.xml
+++ b/app/src/main/res/layout/item_content_news_detail.xml
@@ -1,4 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--&lt;!&ndash;ProgressActivity用于状态页的控制 比如加载中  网络异常  无数据  适合任何页面&ndash;&gt;-->
+<!--<com.xiaochao.lcrapiddeveloplibrary.viewtype.ProgressActivity-->
+<!--android:id="@+id/progress"-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="match_parent">-->
+
+<!--<LinearLayout-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="match_parent"-->
+<!--android:orientation="vertical">-->
+<!--&lt;!&ndash;SpringView下拉刷新&ndash;&gt;-->
+<!--<com.xiaochao.lcrapiddeveloplibrary.widget.SpringView-->
+<!--android:id="@+id/springview"-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="match_parent"-->
+<!--android:background="#FFFFFF">-->
 <android.support.v4.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
