--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,7 +27,7 @@
         <item name="android:windowContentOverlay">@null</item>
         <item name="windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
-        <item name="android:windowBackground">@drawable/welcome</item>
+        <!--<item name="android:windowBackground">@drawable/welcome</item>-->
     </style>
     <!--首页底部tabstyle-->
     <style name="ActivityTitle">
